docs/4.20/authentication/external-auth.md
While the built-in OpenShift OAuth server supports integration with a variety of identity providers, including external OpenID Connect (OIDC) identity providers, it is limited to the capabilities of the OAuth server itself. You can configure OpenShift Container Platform to use an external OIDC identity provider directly to issue tokens for authentication, which replaces the built-in OpenShift OAuth server.

# About direct authentication with an external OIDC identity provider

You can enable direct integration with an external OpenID Connect (OIDC) identity provider to issue tokens for authentication. This bypasses the built-in OAuth server and uses the external identity provider directly.

By integrating directly with an external OIDC provider, you can leverage the advanced capabilities of your preferred OIDC provider instead of being limited by the capabilities of the built-in OAuth server. Your organization can manage users and groups from a single interface, while also streamlining authentication across multiple clusters and in hybrid environments. You can also integrate with existing tools and solutions.

<div class="important">

Currently, you may configure only one OIDC provider for direct authentication.

</div>

After switching to direct authentication, existing authentication configuration is not guaranteed to be preserved. Prior to enabling direct authentication, back up any existing user, group, oauthclient, or identity provider configuration in case you need to revert back to using the built-in OAuth server for authentication.

Before replacing the built-in OAuth server with an external provider, ensure that you have access to a long-lived method of logging in with cluster administrator permissions, such as one of the following:

- a certificate-based user `kubeconfig` file, such as the one generated by the installation program

- a long-lived service account token `kubeconfig` file

- a certificate-based service account `kubeconfig` file

If there are any issues with the external identity provider, you need one of these methods to gain access to the OpenShift Container Platform cluster in an emergency situation.

## Disabled OAuth resources

When you enable direct authentication, several OAuth resources are intentionally removed.

<div class="important">

Ensure that you do not rely on these removed resources before configuring direct authentication.

</div>

The following resources are unavailable when direct authentication is configured:

- OpenShift OAuth server and OpenShift OAuth API server

- User and group APIs (`*.user.openshift.io`)

- OAuth APIs (`*.oauth.openshift.io`)

- OAuth server and client configurations

## Direct authentication identity providers

Direct authentication has been tested with the following OpenID Connect (OIDC) identity providers:

- Active Directory Federation Services for Windows Server

- GitLab

- Google

- Keycloak

- Microsoft Entra ID

- Okta

- Ping Identity

- Red Hat Single Sign-On

<div class="note">

Red Hat does not test all factors associated with third-party identity provider functionality. For more information about third-party support, see the [Red Hat third-party support policy](https://access.redhat.com/third-party-software-support).

</div>

# Configuring an external OIDC identity provider for direct authentication

You can configure OpenShift Container Platform to directly use an external OIDC identity provider to issue tokens for authentication.

- You have configured your external authentication provider.

  This procedure uses Keycloak as the identity provider and assumes that you have the following clients configured:

  - A confidential client for the web console called `console-test` with the valid redirect URIs set to `https://<openshift_console_route>/auth/callback`

  - A public client for the OpenShift CLI (`oc`) called `oc-cli-test` with the valid redirect URIs set to `http://localhost:8080`

- You have access to the `kubeconfig` file generated by the installation program for the cluster.

- You have backed up any existing authentication configuration, in case you need to revert back to using the built-in OAuth server for authentication.

- You have the OpenShift Container Platform web console enabled on the cluster.

  <div class="note">

  If the web console is not enabled in your cluster, see "Example OIDC provider configuration for CLI clients only" for an example configuration without the web console client.

  </div>

1.  Ensure that you are using the `kubeconfig` file generated by the installation program, or another long-lived method of logging in as a cluster administrator.

2.  Create a secret that allows you to authenticate with the web console by running the following command:

    ``` terminal
    $ oc create secret generic console-secret \
        --from-literal=clientSecret=<secret_value> \
        -n openshift-config
    ```

    - Replace `<secret_value>` with the value of the secret for the `console-test` client in your identity provider.

3.  Optional: Create a config map that contains the provider’s certificate authority bundle by running the following command:

    ``` terminal
    $ oc create configmap keycloak-oidc-ca --from-file=ca-bundle.crt=my-directory/ca-bundle.crt \
        -n openshift-config
    ```

    - Specify the path to your provider’s `ca-bundle.crt` file.

4.  Edit the authentication configuration by running the following command:

    ``` terminal
    $ oc edit authentication.config/cluster
    ```

5.  Update the authentication configuration by setting the `type` field to `OIDC`, configuring the `oidcProviders` field for your provider, and setting the `webhookTokenAuthenticator` field to `null`:

    ``` yaml
    apiVersion: config.openshift.io/v1
    kind: Authentication
    metadata:
    # ...
    spec:
      type: OIDC
      webhookTokenAuthenticator: null
      oidcProviders:
      - claimMappings:
          extra:
          - key: example.com/role
            valueExpression: claims.?role.orValue("unknown")
          groups:
            claim: groups
            prefix: 'oidc-groups-test:'
          uid:
            claim: "sub"
          username:
            claim: email
            prefixPolicy: Prefix
            prefix:
              prefixString: 'oidc-user-test:'
        issuer:
          audiences:
          - console-test
          - oc-cli-test
          issuerCertificateAuthority:
            name: keycloak-oidc-ca
          issuerURL: https://keycloak-keycloak.apps.example.com/realms/master
        name: 'keycloak-oidc-server'
        oidcClients:
        - clientID: oc-cli-test
          componentName: cli
          componentNamespace: openshift-console
        - clientID: console-test
          clientSecret:
            name: console-secret
          componentName: console
          componentNamespace: openshift-console
          extraScopes:
            - email
            - profile
    ```

    - Must be set to `OIDC` to indicate to use an external OIDC identity provider.

    - Must be set to `null` when `type` is set to `OIDC`.

    - The OIDC provider configuration. Currently, only one OIDC provider configuration is allowed.

    - An optional field for configuring the mappings used to construct the extra attributes for the cluster identity.

    - The name of the claim to construct group names for the cluster identity.

    - An optional field for configuring the claim mapping used to construct the uid for the cluster identity.

    - The name of the claim to construct usernames for the cluster identity.

    - The list of audiences that this authentication provider issues tokens for.

    - The name of the config map that contains the `ca-bundle.crt` key. If unset, system trust is used instead.

    - The URL for the token issuer.

    - The name for external OIDC provider.

    - The client ID that your provider uses for the OpenShift CLI (`oc`).

    - The client ID that your provider uses for the OpenShift Container Platform web console.

    - The name of the secret that stores the secret value for the console client.

    - The extra scopes to request. Some providers, such as GitLab, might require extra scopes in order to log in through the web console properly.

      For more details on all available parameters, see "OIDC provider configuration parameters".

6.  Exit and save the changes to apply the new configuration.

7.  Wait for the cluster to roll out new revisions to all nodes.

    1.  Check the Kubernetes API server Operator status by running the following command:

        ``` terminal
        $ oc get co kube-apiserver
        ```

        <div class="formalpara-title">

        **Example output**

        </div>

        ``` terminal
        NAME             VERSION   AVAILABLE   PROGRESSING   DEGRADED   SINCE   MESSAGE
        kube-apiserver   4.20.0    True        True          False      85m     NodeInstallerProgressing: 2 node are at revision 8; 1 node is at revision 10
        ```

        The message in the preceding example shows that one node has progressed to the new revision and two nodes have not yet updated. It can take 20 minutes or more to roll out the new revision to all nodes, depending on the size of your cluster.

    2.  To troubleshoot any issues, you can also check the Cluster Authentication Operator and `kube-apiserver` pod logs for errors.

<!-- -->

1.  Verify that you can log in to the OpenShift CLI (`oc`) by authenticating with your identity provider:

    1.  Log in by running the following command:

        ``` terminal
        $ oc login --exec-plugin=oc-oidc \
            --issuer-url=https://keycloak-keycloak.apps.example.com/realms/master \
            --client-id=oc-cli-test \
            --extra-scopes=email --callback-port=8080 \
            --oidc-certificate-authority my-directory/ca-bundle.crt
        ```

        - Specify `oc-oidc` as the exec plugin type. Only a value of `oc-oidc` is allowed.

        - Specify the issuer URL for your identity provider.

        - Specify client ID for the OpenShift CLI (`oc`).

        - Specify the path to the `ca-bundle.crt` file on your local machine.

          <div class="formalpara-title">

          **Example output**

          </div>

          ``` terminal
          Please visit the following URL in your browser: http://localhost:8080
          ```

    2.  Open <http://localhost:8080> in a browser.

    3.  Authenticate with credentials from your identity provider.

        After successfully authenticating, you should see a message similar to the following output in your terminal:

        ``` terminal
        Logged into "https://api.my-cluster.example.com:6443" as "oidc-user-test:user1@example.com" from an external oidc issuer.
        ```

2.  Verify that you can log in to the OpenShift Container Platform web console by authenticating with your identity provider:

    1.  Open the web console URL for your cluster in a browser.

        You are redirected to your identity provider to log in.

    2.  Authenticate with credentials from your identity provider.

        Verify that you logged in successfully and are redirected to the OpenShift Container Platform web console.

- [Example OIDC provider configuration for CLI clients only](../authentication/external-auth.xml#external-auth-cli_external-auth)

## OIDC provider configuration parameters

The following table lists all available OIDC provider parameters for direct authentication:

<table>
<caption><code>oidcProviders</code> configuration</caption>
<colgroup>
<col style="width: 33%" />
<col style="width: 66%" />
</colgroup>
<thead>
<tr class="header">
<th style="text-align: left;">Parameter</th>
<th style="text-align: left;">Description</th>
</tr>
</thead>
<tbody>
<tr class="odd">
<td style="text-align: left;"><p><code>claimMappings</code></p></td>
<td style="text-align: left;"><p>Configures the rules to be used by the Kubernetes API server for translating claims in a JSON web token (JWT), issued by the identity provider, to a cluster identity.</p></td>
</tr>
<tr class="even">
<td style="text-align: left;"><p><code>claimMappings.extra</code></p></td>
<td style="text-align: left;"><p>An optional field for configuring the mappings used to construct the extra attribute for the cluster identity. When omitted, no extra attributes will be present on the cluster identity. Key values for extra mappings must be unique. A maximum of 32 extra attribute mappings may be provided.</p></td>
</tr>
<tr class="odd">
<td style="text-align: left;"><p><code>claimMappings.extra.key</code></p></td>
<td style="text-align: left;"><p>A required field that specifies the string to use as the extra attribute key. The following restrictions apply:</p>
<ul>
<li><p>Key must be a domain-prefix path (e.g <code>example.org/foo</code>).</p></li>
<li><p>Key must not exceed 510 characters in length.</p></li>
<li><p>Key must contain the <code>/</code> character, separating the domain and path characters.</p></li>
<li><p>Key must not be empty.</p></li>
<li><p>The domain portion of the key (string of characters before the <code>/</code>) must be a valid RFC1123 subdomain.</p></li>
<li><p>It must not exceed 253 characters in length.</p></li>
<li><p>It must start and end with an alphanumeric character.</p></li>
<li><p>It must only contain lower case alphanumeric characters and <code>-</code> or <code>.</code>.</p></li>
<li><p>It must not use the reserved domains, or be subdomains of, <code>kubernetes.io</code>, <code>k8s.io</code>, and <code>openshift.io</code>.</p></li>
<li><p>The path portion of the key (string of characters after the <code>/</code>) must not be empty and must consist of at least one alphanumeric character, percent-encoded octets, <code>-</code>, <code>.</code>, <code>_</code>, <code>~</code>, <code>!</code>, <code>$</code>, <code>&amp;</code>, <code>'</code>, <code>(</code>, <code>)</code>, <code>*</code>, <code>+</code>, <code>,</code>, <code>;</code>, <code>=</code>, and <code>:</code>.</p></li>
<li><p>Domain portion of the key must not exceed 256 characters in length.</p></li>
</ul></td>
</tr>
<tr class="even">
<td style="text-align: left;"><p><code>claimMappings.extra.valueExpression</code></p></td>
<td style="text-align: left;"><p>A required field to specify the CEL expression to extract the extra attribute value from claims of a JWT token. The <code>valueExpression</code> field must produce a string or string array value. The following restrictions apply:</p>
<ul>
<li><p>CEL expressions that return "", [], and null are treated as the extra mapping not being present.</p></li>
<li><p>Empty string values within an array are filtered out. For example, [<code>one</code>, <code>`, `three</code>] becomes [<code>one</code>, <code>three</code>].</p></li>
<li><p>CEL expressions have access to the token claims through a CEL variable, <code>claims</code>.</p></li>
<li><p><code>claims</code> is a map of claim names to claim values. For example, the <code>sub</code> claim value can be accessed as <code>claims.sub</code>.</p></li>
<li><p>Nested claims can be accessed using dot notation (<code>claims.foo.bar</code>).</p></li>
<li><p>The <code>valueExpression</code> value must not exceed 1024 characters in length.</p></li>
<li><p>The <code>valueExpression</code> value must not be empty.</p></li>
</ul></td>
</tr>
<tr class="odd">
<td style="text-align: left;"><p><code>claimMappings.groups</code></p></td>
<td style="text-align: left;"><p>Configures how the groups of a cluster identity should be constructed from the claims in a JWT token issued by the identity provider. When referencing a claim, if the claim is present in the JWT token, its value must be a comma-separated list of groups.</p></td>
</tr>
<tr class="even">
<td style="text-align: left;"><p><code>claimMappings.groups.claim</code></p></td>
<td style="text-align: left;"><p>Configures the JWT token claim whose value is assigned to the cluster identity field associated with this mapping.</p></td>
</tr>
<tr class="odd">
<td style="text-align: left;"><p><code>claimMappings.groups.prefix</code></p></td>
<td style="text-align: left;"><p>Configures the prefix that is applied to the cluster identity attribute during the process of mapping JWT claims to cluster identity attributes.</p></td>
</tr>
<tr class="even">
<td style="text-align: left;"><p><code>claimMappings.uid</code></p></td>
<td style="text-align: left;"><p>An optional field for configuring the claim mapping used to construct the UID for the cluster identity. When omitted, this means the user has no opinion and the platform is left to choose a default, which is subject to change over time. The current default is to use the <code>sub</code> claim.</p></td>
</tr>
<tr class="odd">
<td style="text-align: left;"><p><code>claimMappings.uid.claim</code></p></td>
<td style="text-align: left;"><p>An optional field for specifying the JWT token claim that is used in the mapping. The value of this claim will be assigned to the field in which this mapping is associated. To specify the claim, use a single string value for <code>uid.claim</code>.</p>
<p>You must set either <code>claim</code> or <code>expression</code>. Do not specify <code>claim</code> when <code>expression</code> is set. The value of <code>claim</code> must be at least 1 character and must not exceed 256 characters in length.</p></td>
</tr>
<tr class="even">
<td style="text-align: left;"><p><code>claimMappings.uid.expression</code></p></td>
<td style="text-align: left;"><p>An optional field for specifying a CEL expression that produces a string value from JWT token claims. When using <code>uid.expression</code> the expression must result in a single string value.</p>
<p>CEL expressions have access to the token claims through a CEL variable, <code>claims</code>. The <code>claims</code> variable is a map of claim names to claim values. For example, you can access the <code>sub</code> claim value as <code>claims.sub</code>. Nested claims can be accessed using dot notation for example, <code>claims.foo.bar</code>.</p>
<p>You must set either <code>claim</code> or <code>expression</code>. Do not specify <code>expression</code> when <code>claim</code> is set. The value of <code>expression</code> must be at least 1 character and must not exceed 1024 characters in length.</p></td>
</tr>
<tr class="odd">
<td style="text-align: left;"><p><code>claimMappings.username</code></p></td>
<td style="text-align: left;"><p>Configures how the username of a cluster identity should be constructed from the claims in a JWT token issued by the identity provider.</p></td>
</tr>
<tr class="even">
<td style="text-align: left;"><p><code>claimMappings.username.claim</code></p></td>
<td style="text-align: left;"><p>Configures the JWT token claim whose value is assigned to the cluster identity field associated with this mapping.</p></td>
</tr>
<tr class="odd">
<td style="text-align: left;"><p><code>claimMappings.username.prefix</code></p></td>
<td style="text-align: left;"><p>Configures the prefix that should be prepended to the value of the JWT claim. Must be set when <code>prefixPolicy</code> is set to <code>Prefix</code> and must be unset otherwise.</p></td>
</tr>
<tr class="even">
<td style="text-align: left;"><p><code>claimMappings.username.prefix.prefixString</code></p></td>
<td style="text-align: left;"><p>Configures the prefix that is applied to the cluster identity username attribute during the process of mapping JWT claims to cluster identity attributes. Must not be an empty string (<code>""</code>).</p></td>
</tr>
<tr class="odd">
<td style="text-align: left;"><p><code>claimMappings.username.prefixPolicy</code></p></td>
<td style="text-align: left;"><p>Configures how a prefix should be applied to the value of the JWT claim specified in the <code>claim</code> field. Allowed values are <code>Prefix</code>, <code>NoPrefix</code>, and omitted (not provided or an empty string).</p>
<p>When set to <code>Prefix</code>, the value specified in the prefix field is prepended to the value of the JWT claim. The prefix field must be set when <code>prefixPolicy</code> is <code>Prefix</code>.</p>
<p>When set to <code>NoPrefix</code>, no prefix is prepended to the value of the JWT claim.</p>
<p>When omitted, this means no opinion and the platform is left to choose any prefixes that are applied which is subject to change over time.</p>
<p>Currently, the platform prepends <code>{issuerURL}#</code> to the value of the JWT claim when the claim is not <code>email</code>.</p></td>
</tr>
<tr class="even">
<td style="text-align: left;"><p><code>claimValidationRules</code></p></td>
<td style="text-align: left;"><p>Configures the rules to be used by the Kubernetes API server for validating the claims in a JWT token issued by the identity provider. Validation rules are joined by an <code>AND</code> operation.</p></td>
</tr>
<tr class="odd">
<td style="text-align: left;"><p><code>claimValidationRules.requiredClaim</code></p></td>
<td style="text-align: left;"><p>Configures the required claim and value that the Kubernetes API server uses to validate if an incoming JWT is valid for this identity provider.</p></td>
</tr>
<tr class="even">
<td style="text-align: left;"><p><code>claimValidationRules.requiredClaim.claim</code></p></td>
<td style="text-align: left;"><p>Configures the name of the required claim. When taken from the JWT claims, the claim must be a string value. Must not be an empty string (<code>""</code>).</p></td>
</tr>
<tr class="odd">
<td style="text-align: left;"><p><code>claimValidationRules.requiredClaim.requiredValue</code></p></td>
<td style="text-align: left;"><p>Configures the value that <code>claim</code> must have when taken from the incoming JWT claims. If the value in the JWT claims does not match, the token is rejected for authentication. Must not be an empty string (<code>""</code>).</p></td>
</tr>
<tr class="even">
<td style="text-align: left;"><p><code>claimValidationRules.type</code></p></td>
<td style="text-align: left;"><p>Configures the type of the validation rule. Allowed values are <code>RequiredClaim</code> and omitted (not provided or an empty string).</p>
<p>When set to <code>RequiredClaim</code>, the Kubernetes API server is configured to validate that the incoming JWT contains the required claim and that its value matches the required value. The default value is <code>RequiredClaim</code>.</p></td>
</tr>
<tr class="odd">
<td style="text-align: left;"><p><code>issuer</code></p></td>
<td style="text-align: left;"><p>A required field that configures how the platform interacts with the identity provider and how tokens issued from the identity provider are evaluated by the Kubernetes API server.</p></td>
</tr>
<tr class="even">
<td style="text-align: left;"><p><code>issuer.audiences</code></p></td>
<td style="text-align: left;"><p>A required field that configures the acceptable audiences the JWT token, issued by the identity provider, must be issued to. At least one of the entries must match the <code>aud</code> claim in the JWT token. Must contain at least one entry and must not exceed 10 entries.</p></td>
</tr>
<tr class="odd">
<td style="text-align: left;"><p><code>issuer.issuerCertificateAuthority</code></p></td>
<td style="text-align: left;"><p>Configures the certificate authority, used by the Kubernetes API server, to validate the connection to the identity provider when fetching discovery information. When not specified, the system trust is used. When specified, it must reference a config map in the <code>openshift-config</code> namespace containing the PEM-encoded CA certificates under the <code>ca-bundle.crt</code> key in the <code>data</code> field of the config map.</p></td>
</tr>
<tr class="even">
<td style="text-align: left;"><p><code>issuer.issuerCertificateAuthority.name</code></p></td>
<td style="text-align: left;"><p>The name of the referenced config map.</p></td>
</tr>
<tr class="odd">
<td style="text-align: left;"><p><code>issuer.issuerURL</code></p></td>
<td style="text-align: left;"><p>Configures the URL used to issue tokens by the identity provider. The Kubernetes API server determines how authentication tokens should be handled by matching the <code>iss</code> claim in the JWT to the issuerURL of configured identity providers. This field is required and must use the <code>https://</code> scheme.</p></td>
</tr>
<tr class="even">
<td style="text-align: left;"><p><code>name</code></p></td>
<td style="text-align: left;"><p>A required field that configures the unique human-readable identifier associated with the identity provider. It is used to distinguish between multiple identity providers and has no impact on token validation or authentication mechanics. Must not be an empty string (<code>""</code>).</p></td>
</tr>
<tr class="odd">
<td style="text-align: left;"><p><code>oidcClients</code></p></td>
<td style="text-align: left;"><p>Configures how on-cluster, platform clients should request tokens from the identity provider. Must not exceed 20 entries and entries must have unique namespace/name pairs.</p></td>
</tr>
<tr class="even">
<td style="text-align: left;"><p><code>oidcClients.clientID</code></p></td>
<td style="text-align: left;"><p>Configures the client identifier, from the identity provider, that the platform component uses for authentication requests made to the identity provider. The identity provider must accept this identifier for platform components to be able to use the identity provider as an authentication mode. Must not be an empty string (<code>""</code>).</p></td>
</tr>
<tr class="odd">
<td style="text-align: left;"><p><code>oidcClients.clientSecret</code></p></td>
<td style="text-align: left;"><p>Configures the client secret used by the platform component when making authentication requests to the identity provider.</p>
<p>When not specified, no client secret is used when making authentication requests to the identity provider.</p>
<p>When specified, it references a secret in the <code>openshift-config</code> namespace that contains the client secret in the <code>clientSecret</code> key of the <code>.data</code> field. The client secret is used when making authentication requests to the identity provider.</p>
<p>Public clients do not require a client secret, but private clients do require a client secret to work with the identity provider.</p></td>
</tr>
<tr class="even">
<td style="text-align: left;"><p><code>oidcClients.clientSecret.name</code></p></td>
<td style="text-align: left;"><p>The name of the referenced secret.</p></td>
</tr>
<tr class="odd">
<td style="text-align: left;"><p><code>oidcClients.componentName</code></p></td>
<td style="text-align: left;"><p>Specifies the name of the platform component being configured to use the identity provider as an authentication mode. It is used in combination with <code>componentNamespace</code> as a unique identifier. Must not be an empty string (<code>""</code>) and must not exceed 256 characters in length.</p></td>
</tr>
<tr class="even">
<td style="text-align: left;"><p><code>oidcClients.componentNamespace</code></p></td>
<td style="text-align: left;"><p>Specifies the namespace in which the platform component being configured to use the identity provider as an authentication mode is running. It is used in combination with <code>componentName</code> as a unique identifier. Must not be an empty string (<code>""</code>) and must not exceed 63 characters in length.</p></td>
</tr>
<tr class="odd">
<td style="text-align: left;"><p><code>oidcClients.extraScopes</code></p></td>
<td style="text-align: left;"><p>Configures the extra scopes that should be requested by the platform component when making authentication requests to the identity provider. This is useful if you have configured claim mappings that require specific scopes to be requested beyond the standard OIDC scopes. When omitted, no additional scopes are requested.</p></td>
</tr>
</tbody>
</table>

`oidcProviders` configuration

## Example OIDC provider configuration for CLI clients only

In OpenShift Container Platform clusters where the web console is disabled, you can configure direct authentication with an external OIDC provider for a CLI client only. In these cases, users must authenticate with the cluster directly through the OpenShift CLI (`oc`) instead of through the web console.

The following example OIDC provider configuration shows how to configure a CLI client without defining a web console client:

<div class="formalpara-title">

**OIDC provider configuration with only a CLI client**

</div>

``` yaml
apiVersion: config.openshift.io/v1
kind: Authentication
metadata:
# ...
spec:
  type: OIDC
  webhookTokenAuthenticator: null
  oidcProviders:
  - claimMappings:
      groups:
        claim: groups
        prefix: 'oidc-groups-test:'
      username:
        claim: email
        prefixPolicy: Prefix
        prefix:
          prefixString: 'oidc-user-test:'
    issuer:
      audiences:
      - my-cli-client-id
      issuerURL: my-issuer-url
    name: my-oidc-provider-name
```

# Disabling direct authentication

If necessary, you can disable direct authentication for your cluster and revert back to authenticating with the built-in OpenShift OAuth server.

- You have access to the `kubeconfig` file generated by the installation program for the cluster.

1.  Ensure that you are using the `kubeconfig` file generated by the installation program, or another long-lived method of logging in as a cluster administrator.

2.  Update the authentication configuration to use the built-in OpenShift OAuth server by running the following command:

    ``` terminal
    $ oc patch authentication.config/cluster --type=merge -p='
    spec:
      type: ""
      oidcProviders: null
    '
    ```

    - Sets `type` to `""` to use the built-in OpenShift OAuth server. A value of `IntegratedOAuth` is also equivalent.

    - Removes the `oidcProviders` configuration.

3.  Wait for the cluster to roll out new revisions to all nodes.

    1.  Check the Kubernetes API server Operator status by running the following command:

        ``` terminal
        $ oc get co kube-apiserver
        ```

        <div class="formalpara-title">

        **Example output**

        </div>

        ``` terminal
        NAME             VERSION   AVAILABLE   PROGRESSING   DEGRADED   SINCE   MESSAGE
        kube-apiserver   4.20.0    True        True          False      85m     NodeInstallerProgressing: 2 node are at revision 12; 1 node is at revision 14
        ```

        The message in the preceding example shows that one node has progressed to the new revision and two nodes have not yet updated. It can take 20 minutes or more to roll out the new revision to all nodes, depending on the size of your cluster.

    2.  To troubleshoot any issues, you can also check the Cluster Authentication Operator and `kube-apiserver` pod logs for errors.

4.  If necessary, restore any existing authentication configuration.

- Verify that you can successfully log in to the OpenShift Container Platform web console and OpenShift CLI (`oc`).
